dropshot/tests/fail/bad_endpoint2.stderr
error: Expected a non-receiver argument
Endpoint handlers must have the following signature:
    async fn bad_endpoint(
        rqctx: &dropshot::RequestContext<MyContext>,
        [query_params: Query<Q>,]
        [path_params: Path<P>,]
        [body_param: TypedBody<J>,]
        [body_param: UntypedBody<J>,]
    ) -> Result<HttpResponse*, HttpError>
  --> $DIR/bad_endpoint2.rs:13:23
   |
13 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   |                       ^^^^
